edit Inputs & add momentJalali & تقسیم بÙ Divided into components

--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -225,6 +225,7 @@ table {
       background-color: transparent;
       color: dodgerblue;
       transition: .4s;
+      border-radius: 6px;
     }
     button:hover {
       background-color: dodgerblue;
