--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -98,6 +98,17 @@ input:focus {
   }
 }
 
+@keyframes animation2 {
+  0% {
+    opacity: .5;
+    transform: matrix(.1 , 200 , 200 , .1 , 0 , 0);
+  }
+  100% {
+    opacity: 1;
+    transform: matrix(1 , 0 , 0 , 1 , 0 , 0);
+  }
+}
+
 .background {
   display: flex;
   justify-content: center;
@@ -108,19 +119,52 @@ input:focus {
   width: 100%;
   height: 100%;
   font-family: Vazirmatn , serif;
-  .textInBackground {
+  backdrop-filter: blur(3px);
+  animation: animation2 1s;
+  z-index: 9999999999;
+  .confirmModal {
+    display: block !important;
+    padding: 2rem 1rem;
+    width: 400px;
     text-align: center;
-    padding: 3rem 2rem;
-    border: 1px dashed #0AA1DD;
-    direction: rtl;
-    background-color: #E8F9FD;
-    h5 {
-      font-size: 1.2rem;
-      font-weight: 500;
-      margin-bottom: 3rem;
+    background: linear-gradient(to top right , rgba(255,255,255,1) , rgba(255,255,255,.6));
+    color: #2c3e50;
+    border-radius: 6px;
+    box-shadow: 0 0 5px #ecf0f1;
+    .text {
+      font-size: .9rem;
     }
-    p {
-      font-size: .8rem;
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 100%;
+      button {
+        padding: .5rem 1rem;
+        margin-top: 2rem;
+        font-family: Vazirmatn , serif;
+        background-color: transparent;
+        transition: .4s;
+        border-radius: 6px;
+      }
+      .dangerBtn {
+        border: 1px solid #FF4949;
+        color: #FF4949;
+      }
+      .dangerBtn:hover {
+        cursor: pointer;
+        background-color: #FF4949;
+        color: white;
+      }
+      .successBtn {
+        border: 1px solid #4E944F;
+        color: #4E944F;
+      }
+      .successBtn:hover {
+        cursor: pointer;
+        background-color: #4E944F;
+        color: white;
+      }
     }
   }
 }
