--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -405,32 +405,37 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  padding: 2rem;
-  width: 300px;
-  height: 50px;
-  background-color: #ecf0f1;
-  color: #2c3e50;
-  box-shadow: 0 0 5px #ecf0f1;
-  border-radius: 6px;
-  animation: animation1 3s;
-  p {
-    font-size: 0.9rem;
-    text-align: center;
-    line-height: 2;
-  }
-  span {
-    position: absolute;
-    top: 0;
-    right: 1rem;
-    font-size: 2.2rem;
-    transform: rotate(45deg);
-    transition: 0.3s;
-  }
-  span:hover {
-    transform: rotate(135deg);
-    cursor: pointer;
+  margin: 0 auto;
+  width: 80%;
+  height: 60vh;
+  direction: rtl;
+  .sampleModalBody {
+    position: relative;
+    margin: 0 auto;
+    padding: 2rem;
+    width: 400px;
+    height: 50px;
+    background-color: #ecf0f1;
+    color: #2c3e50;
+    box-shadow: 0 0 5px #ecf0f1;
+    border-radius: 6px;
+    animation: animation1 3s;
+    p {
+      font-size: 0.9rem;
+      text-align: center;
+      line-height: 2;
+    }
+    span {
+      position: absolute;
+      top: 0;
+      right: 1rem;
+      font-size: 2.2rem;
+      transform: rotate(45deg);
+      transition: 0.3s;
+    }
+    span:hover {
+      transform: rotate(135deg);
+      cursor: pointer;
+    }
   }
 }
