--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -384,6 +384,48 @@ input:focus {
             display: block;
           }
         }
+        .edit-radio-inputs {
+          display: flex;
+          flex-direction: row !important;
+          justify-content: space-around;
+          align-items: center;
+          margin-right: 1.5rem;
+          .accessRate {
+            position: relative;
+            padding-right: 1.5rem;
+            input {
+              opacity: 0;
+            }
+            .checkmark {
+              position: absolute;
+              right: 0;
+              width: 20px;
+              height: 20px;
+              border-radius: 50%;
+              background-color: #ecf0f1;
+            }
+            .checkmark:after {
+              display: none;
+              content: "";
+              position: absolute;
+              top: 5.5px;
+              right: 5.5px;
+              width: 9px;
+              height: 9px;
+              border-radius: 50%;
+              background-color: white;
+            }
+          }
+          .accessRate:hover .checkmark {
+            background-color: lightgray;
+          }
+          .accessRate input:checked ~ .checkmark {
+            background-color: #0AA1DD;
+          }
+          .accessRate input:checked ~ .checkmark:after {
+            display: block;
+          }
+        }
       }
     }
     button {
