--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -22,7 +22,7 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: Vazirmatn , serif;
+  font-family: Vazirmatn , serif !important;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
