--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -1,740 +1,12 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  font-family: Vazirmatn , serif !important;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-.d-none {
-  display: none !important;
-}
-
-.d-flex {
-  display: flex !important;
-}
-
-input {
-  box-shadow: 0 0 2px #fff;
-  transition: .4s;
-}
-
-input:focus {
-  box-shadow: 0 0 2px #0AA1DD;
-}
-
-@keyframes appearFromLeftBottom {
-  0% {
-    transform: matrix(.3 , 0 , 0 , .3 , -500 , 200);
-  }
-  100% {
-    transform: matrix(1 , 0 , 0 , 1 , 0 , 0);
-  }
-}
-
-@keyframes animation1 {
-  0% {
-    opacity: .4;
-    transform: matrix(.3 , 0 , 0 , .3 , -1600 , -1600);
-    background-color: #2c3e50;
-    color: white;
-  }
-  50% {
-    opacity: 1;
-    transform: matrix(1 , 0 , 0 , 1 , 0 , 0);
-    background-color: white;
-  }
-  80% {
-    opacity: .8;
-    transform: matrix(.7 , 0 , 0 , .7 , 0 , -200);
-  }
-  100% {
-    opacity: 1;
-    transform: matrix(1 , 0 , 0 , 1 , 0 , 0);
-    background-color: #ecf0f1;
-    color: #2c3e50;
-  }
-}
-
-@keyframes animation2 {
-  0% {
-    opacity: .5;
-    transform: matrix(.1 , 200 , 200 , .1 , 0 , 0);
-  }
-  100% {
-    opacity: 1;
-    transform: matrix(1 , 0 , 0 , 1 , 0 , 0);
-  }
-}
-
-@keyframes animation3 {
-  0% {
-    opacity: .5;
-    transform: matrix(.5 , 0 , 0 , .1 , 0 , -400);
-  }
-  50% {
-    opacity: .5;
-    transform: matrix(.1 , 0 , 0 , .1 , 0 , 100);
-  }
-  100% {
-    opacity: 1;
-    transform: matrix(1 , 0 , 0 , 1 , 0 , 0);
-  }
-}
-
-@keyframes opacityAnime {
-  0% {
-    opacity: 0;
-    transform: scaleX(.1);
-  }
-  100% {
-    opacity: 1;
-    transform: scaleX(1);
-  }
-}
-
-.showUserModalAnimation {
-  animation: animation3 .5s !important;
-}
-
-.background {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  font-family: Vazirmatn , serif;
-  backdrop-filter: blur(3px);
-  animation: animation2 1s;
-  z-index: 9999999999;
-  .showUserModal {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 700px;
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 0 0 6px #ecf0f1;;
-    direction: rtl;
-    h1 {
-      padding-top: 2rem;
-      margin-bottom: -2rem;
-      font-size: 1.3rem;
-      font-weight: 700;
-      color: #2c3e50;
-    }
-    .showUserInfo {
-      display: flex;
-      flex-direction: row;
-      .text {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 2rem;
-        width: 75%;
-        p {
-          margin-top: 2rem;
-          .subject {
-            text-align: right;
-            font-weight: 600;
-            color: #2c3e50;
-          }
-          .value {
-            margin-right: 0;
-            color: #7f8c8d;
-          }
-          .valueInfo {
-            margin-top: 1rem;
-          }
-        }
-      }
-      .userProfileImage{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 45%;
-        margin: 2rem 0 0 4rem;
-        img {
-          width: 100%;
-          border-radius: 50%;
-        }
-      }
-    }
-    .closeShowUserModal {
-      .dodgerBorderBtn {
-        border: 1px solid #FF7F3F;
-        padding: .5rem 1rem;
-        margin-bottom: 1rem;
-        font-family: Vazirmatn , serif;
-        background-color: transparent;
-        color: #FF7F3F;
-        transition: .4s;
-        border-radius: 6px;
-      }
-      .dodgerBorderBtn:hover {
-        background-color: #FF7F3F;
-        color: white;
-        cursor: pointer;
-      }
-    }
-  }
-  .confirmModal {
-    display: block !important;
-    padding: 2rem 1rem;
-    width: 400px;
-    text-align: center;
-    background: linear-gradient(to top right , rgba(255,255,255,1) , rgba(255,255,255,.6));
-    color: #2c3e50;
-    border-radius: 6px;
-    box-shadow: 0 0 5px #ecf0f1;
-    .text {
-      font-size: .9rem;
-    }
-    .buttons {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      width: 100%;
-      button {
-        padding: .5rem 1rem;
-        margin-top: 2rem;
-        font-family: Vazirmatn , serif;
-        background-color: transparent;
-        transition: .4s;
-        border-radius: 6px;
-      }
-      .dangerBtn {
-        border: 1px solid #FF4949;
-        color: #FF4949;
-      }
-      .dangerBtn:hover {
-        cursor: pointer;
-        background-color: #FF4949;
-        color: white;
-      }
-      .successBtn {
-        border: 1px solid #4E944F;
-        color: #4E944F;
-      }
-      .successBtn:hover {
-        cursor: pointer;
-        background-color: #4E944F;
-        color: white;
-      }
-    }
-  }
-}
-
-.addBtn {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  bottom: 2rem;
-  left: 2rem;
-  padding: .3rem;
-  border: 1px solid #FF7F3F;
-  width: 3rem;
-  background-color: #FF7F3F;
-  color: white;
-  font-size: 3rem;
-  font-weight: 900;
-  border-radius: 100%;
-  z-index: 9999;
-  transition: .4s;
-}
-
-.addBtn:hover {
-  background-color: white;
-  color: #FF7F3F;
-  cursor: pointer;
-  transform: rotate(90deg);
-}
-
-
-.addUsersForm {
-  position: absolute;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(3px);
-  z-index: 999999;
-  animation: appearFromLeftBottom 1s;
-  .form {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    width: 800px;
-    background: linear-gradient(to top right , rgba(255,255,255,1) , rgba(255,255,255,.6));
-    color: #2c3e50;
-    box-shadow: 0 0 4px #ecf0f1;
-    border-radius: 10px;
-    h3 {
-      margin: 1.5rem 0;
-      font-size: 1.2rem;
-      font-weight: 500;
-    }
-    .closeForm {
-      position: absolute;
-      top: 0;
-      right: 1rem;
-      font-size: 3rem;
-      transform: rotate(45deg);
-    }
-    .closeForm:hover {
-      cursor: pointer;
-    }
-    .inputs {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      width: 100%;
-      direction: rtl;
-      .rightSide , .leftSide {
-        display: flex;
-        flex-direction: column;
-        label {
-          margin: .6rem 0;
-        }
-        input[type=text] {
-          font-family: Vazirmatn , serif;
-          margin: .6rem 1rem .6rem 0;
-          outline: 0;
-          border: 1px solid #ecf0f1;
-          padding: .4rem .3rem;
-          width: 100%;
-          border-radius: 5px;
-        }
-        .radio-inputs {
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
-          margin-right: 1.5rem;
-          .accessRate {
-            position: relative;
-            padding-right: 1.5rem;
-            input {
-              opacity: 0;
-            }
-            .checkmark {
-              position: absolute;
-              right: 0;
-              width: 20px;
-              height: 20px;
-              border-radius: 50%;
-              background-color: #ecf0f1;
-            }
-            .checkmark:after {
-              display: none;
-              content: "";
-              position: absolute;
-              top: 5.5px;
-              right: 5.5px;
-              width: 9px;
-              height: 9px;
-              border-radius: 50%;
-              background-color: white;
-            }
-          }
-          .accessRate:hover .checkmark {
-            background-color: lightgray;
-          }
-          .accessRate input:checked ~ .checkmark {
-            background-color: #FF7F3F;
-          }
-          .accessRate input:checked ~ .checkmark:after {
-            display: block;
-          }
-        }
-      }
-    }
-    button {
-      border: 1px solid #FF7F3F;
-      padding: .5rem 1rem;
-      margin: 1rem;
-      font-family: Vazirmatn , serif;
-      background-color: transparent;
-      color: #FF7F3F;
-      transition: .4s;
-      border-radius: 6px;
-    }
-    button:hover {
-      background-color: #FF7F3F;
-      color: white;
-    }
-  }
-}
-
-header {
-  display: flex;
-  direction: rtl;
-  width: 100%;
-  margin: 0 auto;
-  flex-direction: column;
-  align-content: center;
-  justify-content: space-evenly;
-  align-items: center;
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    margin: 0 auto;
-    width: 100%;
-    height: 5rem;
-    background-color: white;
-    color: #2c3e50;
-    box-shadow: 0 0 25px #fff6e2;
-    direction: rtl;
-    .navbarLeft {
-      height: 100%;
-       .listItems {
-        display: flex;
-        margin: 0 10rem;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        .listItem {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          position: relative;
-          padding: 0 1rem;
-          margin: 0 1rem;
-          height: 100%;
-          text-decoration: none;
-          color: #2c3e50;
-        }
-        .listItem:hover::before {
-          content: "";
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          border-bottom: 3px solid #FF5F00;
-          top: 0;
-          left: 0;
-          animation: opacityAnime .4s;
-          color: black;
-          cursor: pointer;
-        }
-       }
-    }
-    .navbarRight {
-      h1 {
-        margin-right: 5rem;
-        font-size: 1.4rem;
-        font-weight: 800;
-      }
-    }
-  }
-}
-
-.showUsers {
-  h2 {
-    font-weight: 600;
-    font-size: 1.6rem;
-    text-align: center;
-    margin: 2rem 0;
-  }
-  .tableBox {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 1.3rem auto;
-    width: 80%;
-    direction: rtl;
-    table {
-      font-family: Vazirmatn , serif;
-      border-collapse: collapse;
-      width: 100%;
-      color: #2c3e50;
-  
-      tr {
-        transition: .3s;
-        td , th {
-          vertical-align: middle;
-          text-align: center;
-          padding: 16px 8px;
-        }
-        th {
-          padding: 1rem 0;
-          text-align: center;
-          background-color: #FF7F3F;
-          color: white;
-        }
-        td {
-          img {
-            width: 40px;
-            border-radius: 50%;
-          }
-          .icons {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            i {
-              font-size: 1.4rem;
-              margin: 0 .5rem;
-            }
-            i:hover {
-              cursor: pointer;
-            }
-            .bi-check-circle-fill {
-              color: #0AA1DD;
-            }
-            .bi-pencil-square {
-              color: #2ecc71;
-            }
-            .bi-trash3-fill {
-              color: #e74c3c;
-            }
-          }
-        }
-        th:first-of-type {
-          border-radius: 0 .5rem 0 0;
-        }
-        th:last-of-type {
-          border-radius: .5rem 0 0 0;
-        }
-      }
-      tr:nth-child(even) {
-        background-color: #f5f5f5;
-      }
-      tr:hover {
-        background-color: #f1efec;
-        transform: scaleX(1.01);
-        cursor: pointer;
-      }
-      tr:first-of-type:hover {
-        transform: none;
-      }
-      tr:last-of-type {
-        td:first-of-type {
-          border-radius: 0 0 .5rem 0;
-        }
-        td:last-of-type {
-          border-radius: 0 0 0 .5rem;
-        }
-      }
-      input {
-        font-family: Vazirmatn , serif;
-        text-align: center;
-        outline: 0;
-        border: 1px solid #ecf0f1;
-        padding: .5rem 0;
-        width: 100%;
-        border-radius: 5px;
-      }
-    }
-  }
-}
-
-.sampleModal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  width: 80%;
-  height: 60vh;
-  direction: rtl;
-  .sampleModalBody {
-    position: relative;
-    margin: 0 auto;
-    padding: 2rem;
-    width: 400px;
-    height: 50px;
-    background-color: #ecf0f1;
-    color: #2c3e50;
-    box-shadow: 0 0 5px #ecf0f1;
-    border-radius: 6px;
-    animation: animation1 3s;
-    p {
-      font-size: 0.9rem;
-      text-align: center;
-      line-height: 2;
-    }
-    span {
-      position: absolute;
-      top: 0;
-      right: 1rem;
-      font-size: 2.2rem;
-      transform: rotate(45deg);
-      transition: 0.3s;
-    }
-    span:hover {
-      transform: rotate(135deg);
-      cursor: pointer;
-    }
-  }
-}
-
-.helpRoute {
-  direction: rtl;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  width: 90%;
-  color: #2c3e50;
-  h2 {
-    font-size: 2rem;
-    font-weight: 800;
-    margin: 2rem 0;
-  }
-  .helpRouteItem {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 0 auto;
-    h3 {
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin: 1rem 0;
-    }
-    p {
-      font-size: 1.1rem;
-      text-indent: 1rem;
-      margin: 1rem 0 2rem;
-      line-height: 2;
-    }
-    code {
-      direction: ltr;
-      background-color: #ecf0f1;
-      padding: 2rem;
-      margin-bottom: 1rem;
-      border-radius: 6px;
-      color: #2c3e50;
-      letter-spacing: 1px;
-    }
-    img {
-      width: 80%;
-      align-self: center;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 0 6px #FF7F3F;
-    }
-  }
-}
-
-.aboutProjectRoute {
-  direction: rtl;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  width: 90%;
-  color: #2c3e50;
-  h1 {
-    font-size: 2rem;
-    font-weight: 800;
-    margin: 2rem 0;
-  }
-  .aboutProjectRouteItem {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 0 auto;
-    h2 {
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin: 1rem 0;
-    }
-    p {
-      font-size: 1.1rem;
-      margin: 1rem 1rem 2rem;
-      line-height: 2;
-    }
-    .item {
-      h3 {
-        font-size: 1.3rem;
-        font-weight: 600;
-        margin: 1rem 0;
-      }
-      p {
-        font-size: 1.1rem;
-        text-indent: 1rem;
-        margin: 1rem 0 2rem;
-        line-height: 2;
-      }
-    }
-    ul {
-      list-style-type: disc;
-      background-color: #ecf0f1;
-      padding: 1.5rem 3rem;
-      margin-bottom: 1rem;
-      border-radius: 6px;
-      color: #2c3e50;
-      li {
-        margin: 1rem 0;
-        a {
-          text-decoration: none;
-          color: inherit;
-        }
-      }
-    }
-  }
-}
-
-.loading {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  width: 80%;
-  height: 80vh;
-  p {
-    font-size: 1.1rem;
-    font-weight: 600;
-  }
-}
+@import url("./reset.scss");
+@import url("./aboutProjectRoute.scss");
+@import url("./addUsersForm.scss");
+@import url("./animations.scss");
+@import url("./darkMode.scss");
+@import url("./fixedBtns.scss");
+@import url("./generalClasses.scss");
+@import url("./headerProject.scss");
+@import url("./helpRoute.scss");
+@import url("./loading.scss");
+@import url("./modals.scss");
+@import url("./showUsers.scss");
