--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -10,3 +10,4 @@
 @import url("./loading.scss");
 @import url("./modals.scss");
 @import url("./showUsers.scss");
+@import url("./languagesChanges.scss");
