--- a/src/Components/cssStyles/headerProject.scss
+++ b/src/Components/cssStyles/headerProject.scss
@@ -16,7 +16,7 @@ header {
       width: 100%;
       height: 5rem;
       box-shadow: 0 0 25px #fff6e2;
-      direction: rtl;
+      direction: inherit;
       .navbarLeft {
         height: 100%;
          .listItems {
