--- a/src/Components/cssStyles/showUsers.scss
+++ b/src/Components/cssStyles/showUsers.scss
@@ -13,7 +13,7 @@
       text-align: center;
       margin: 1.3rem auto;
       width: 80%;
-      direction: rtl;
+      direction: inherit;
       table {
         font-family: Vazirmatn , serif;
         border-collapse: collapse;
