--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family:Vazirmatn,serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  direction: rtl;
 }
 
 code {
