--- a/src/Components/cssStyles/aboutProjectRoute.scss
+++ b/src/Components/cssStyles/aboutProjectRoute.scss
@@ -1,6 +1,6 @@
 
 .aboutProjectRoute {
-    direction: rtl;
+    direction: inherit;
     display: flex;
     flex-direction: column;
     align-items: center;
