--- a/src/Components/cssStyles/helpRoute.scss
+++ b/src/Components/cssStyles/helpRoute.scss
@@ -1,5 +1,5 @@
 .helpRoute {
-    direction: rtl;
+    direction: inherit;
     display: flex;
     flex-direction: column;
     align-items: center;
