add gridMode to project

--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -11,3 +11,4 @@
 @import url("./modals.scss");
 @import url("./showUsers.scss");
 @import url("./languagesChanges.scss");
+@import url("./gridMode.scss");
