--- a/src/Components/cssStyles/showUsers.scss
+++ b/src/Components/cssStyles/showUsers.scss
@@ -1,10 +1,34 @@
 .showUsers {
+  .showUsersHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem 8rem;
     h2 {
       font-weight: 600;
       font-size: 1.6rem;
       text-align: center;
-      margin: 2rem 0;
     }
+    .chooseShowMode {
+      display: flex;
+      align-items: center;
+      font-size: 1.2rem;
+      background-color: #ecf0f1;
+      color: #2c3e50;
+      border-radius: 10px;
+      i {
+        padding: .8rem .8rem .7rem;
+        width: 100%;
+        transition: .4s;
+        border-radius: 6px;
+      }
+      i:hover {
+        cursor: pointer;
+        background-color: #2c3e50;
+        color: #ecf0f1;
+      }
+    }
+  }
     .tableBox {
       display: flex;
       flex-direction: column;
